--- a/bgimg.css
+++ b/bgimg.css
@@ -1,10 +1,16 @@
+body {
+    background-color: #262626;
+}
 body div#img{
     background-image:url("images4.jpg");
     width: 1100px;
     height: 500px;
-    margin-top: 90px;
     margin-left: 80px;
     margin-right: 90px;
     font-size: 90px;
-    border-radius: 1cm;
+}
+
+body background-image#bgimg {
+    width: 100%;
+    height: 400%;
 }
