--- a/navigation_bar.css
+++ b/navigation_bar.css
@@ -1,31 +1,36 @@
-button {
+body button {
     float: right;
     padding: 5px 5px;
-    background-color: #CCF4FF;
+    background-color: #333;
+    color: #f2f2f2;
     margin-right: 100px;
 }
 
-.nav {
+body div#nav {
     position: static;
     margin-left: 400px;
     margin-top: -60px;
-    padding: 10px;
-    background-color: #006666;
-    float: left;
-    text-align: center;
+    padding: 10px 10px;
+    background-color: #333;
     text-transform: capitalize;
     overflow: hidden;
     width: 60%;
-    border-radius: 0.2cm;
+    border-width: none;
 }
-.nav a {
+body div a {
     float: left;
     display: block;
+    text-align: center;
     text-decoration: none;
     padding: 13px 13px;
-    color: white;
+    color: #f2f2f2;
 }
-.nav a:hover {
-    color: #006666;
-    background-color: #8cff1a;
+body div a:hover {
+    color: black;
+    background-color: #595959;
+}
+
+footer {
+    color: #f2f2f2;
+    text-align: center;
 }
