--- a/form_login.css
+++ b/form_login.css
@@ -2,13 +2,25 @@ form input#login {
     font-size: 20;
     float: right;
     padding: 5px 5px;
+    margin-right: 35px;
 }
+
 form#form_login {
     color: #f2f2f2;
-    padding: 5px 10px;
+    padding: 0.1cm 10px;
     text-decoration: none;
-    background-color: #333;
-    border-radius: 0.3cm;
+    background-color: #006666;
+    border-radius: 0.2cm;
     width: 10cm;
     margin-left: 80px;
+}
+form h2#login_head01 {
+    font-family: sans-serif;
+    background-color: #004d4d;
+    padding: 10px 10px;
+    border-radius: 0.2cm;
+}
+form div#user_pass {
+    text-align: center;
+    font-size: 20px;
 }
