--- a/navigation_bar.css
+++ b/navigation_bar.css
@@ -1,36 +1,32 @@
 body button {
     float: right;
     padding: 5px 5px;
-    background-color: #333;
-    color: #f2f2f2;
+    background-color: white;
+    color: #006666;
     margin-right: 100px;
+    border-radius: 0.09cm;
 }
 
 body div#nav {
     position: static;
     margin-left: 400px;
     margin-top: -60px;
-    padding: 10px 10px;
-    background-color: #333;
-    text-transform: capitalize;
+    background-color: #006666;
     overflow: hidden;
     width: 60%;
-    border-width: none;
+    border-radius: 0.1cm;
 }
 body div a {
     float: left;
     display: block;
     text-align: center;
     text-decoration: none;
-    padding: 13px 13px;
-    color: #f2f2f2;
+    padding: 15px 15px;
+    text-transform: capitalize;
+    border-width: none;
+    color: #ffffff;
 }
 body div a:hover {
-    color: black;
-    background-color: #595959;
-}
-
-footer {
-    color: #f2f2f2;
-    text-align: center;
+    color: #006666;
+    background-color: #66cc00;
 }
