--- a/side_menu.css
+++ b/side_menu.css
@@ -1,6 +1,5 @@
 body div#vertical_menu .vertical_menu_head {
 	font-size: 20;
-	background-color: #262626;
 }
 body div#vertical_menu {
     width: 200px;
@@ -9,13 +8,14 @@ body div#vertical_menu {
 }
 
 body div#vertical_menu a {
-	background-color: #333;
-    color: #f2f2f2;
+
+    color: #000000;
     display: block;
     padding: 12px;
     text-decoration: none;
 }
 
 body div#vertical_menu a:hover {
-	background-color: black;
+	background-color: grey;
+	color: white;
 }
