Change in img and side menu sorted

--- a/side_menu.css
+++ b/side_menu.css
@@ -1,8 +1,9 @@
 body div#vertical_menu .vertical_menu_head {
 	font-size: 20;
+	font-family: sans-serif;
 }
 body div#vertical_menu {
-    width: 200px;
+    width: 160px;
     overflow-y: auto;
     margin-left: 80px;
 }
@@ -15,7 +16,14 @@ body div#vertical_menu a {
     text-decoration: none;
 }
 
+body div#vertical_menu #vertical_menu_list a {
+
+    color: #cc0066;
+    display: block;
+    padding: 12px;
+    text-decoration: none;
+}
+
 body div#vertical_menu a:hover {
-	background-color: grey;
-	color: white;
+	background-color: inherit;
 }
