--- a/bgimg.css
+++ b/bgimg.css
@@ -3,12 +3,14 @@ body {
     background-size: cover;
 }
 body div#img{
-    background-image:url("images4.jpg");
+    background-image:url("images2.jpg");
+    background-size: cover;
     width: 1100px;
     height: 500px;
     margin-left: 80px;
     margin-right: 90px;
     font-size: 90px;
+    border-radius: 0.2cm;
 }
 
 body background-image#bgimg {
