Added php, signup

--- a/bgimg.css
+++ b/bgimg.css
@@ -1,6 +1,5 @@
 body {
-    background-image:url("bkgd.jpg");
-    background-size: cover;
+    background: linear-gradient(#9CDBF8, white);
 }
 body div#img{
     background-image:url("images2.jpg");
