--- a/css/bgimg.css
+++ b/css/bgimg.css
@@ -3,7 +3,7 @@ body {
     background-repeat: no-repeat;
 }
 body div#img{
-    background-image:url("images2.jpg");
+    background-image:url("../pic/images2.jpg");
     background-size: cover;
     width: 1100px;
     height: 500px;
